// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders avatar recommend 1`] = `
<div>
  <div
    class="css-xi606m"
  >
    <div
      class="css-zk1q33"
    >
      <div
        class="chakra-aspect-ratio css-rioh04"
      >
        <img
          alt="John Smith"
          class="chakra-image__placeholder css-1g04xlb"
          src="https://via.placeholder.com/150"
        />
      </div>
      <div
        class="css-4j7euu"
      >
        recommended
      </div>
    </div>
    <p
      class="chakra-text css-7ehhn"
    >
      John Smith
    </p>
  </div>
</div>
`;

exports[`renders avatar unchanged 1`] = `
<div>
  <div
    class="css-xi606m"
  >
    <div
      class="css-zk1q33"
    >
      <div
        class="chakra-aspect-ratio css-rioh04"
      >
        <img
          alt="John Smith"
          class="chakra-image__placeholder css-1g04xlb"
          src="https://via.placeholder.com/150"
        />
      </div>
    </div>
    <p
      class="chakra-text css-7ehhn"
    >
      John Smith
    </p>
  </div>
</div>
`;
